--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
+<html>
+<head>
+    <meta name="color-scheme" content="light dark">
+</head>
+<body>
+<pre style="word-wrap: break-word; white-space: pre-wrap;"> 
 ## Hello There 👋 
 
-I'm a Backend developer from Argentina🇦🇷  living in the netherlands🇳🇱 
+I'm a Backend developer from Argentina🇦🇷  living in the Netherlands🇳🇱 
 
-Currently I'm working at @ [Bol.com](https://bol.com).
+Currently I'm working as SR. Sorftware Engineer @ <a href="https://bol.com">Bol.com</a>
 
 ## If you want to contact me: 
-<a href="https://twitter.com/fedeaz_">
-<img align="left" alt="Federico Alvarez Twitter" width="22px" src="https://icongr.am/fontawesome/twitter.svg?size=128&color=70c8ff" />
-</a>
-<a href="https://www.linkedin.com/in/federico-alvarez-4aaba22b/">
-<img align="left" alt="Federico Alvarez LinkedIN" width="22px" src="https://icongr.am/fontawesome/linkedin.svg?size=128&color=70c8ff" />
-</a>
+<a href="https://www.linkedin.com/in/federico-alvarez-4aaba22b/">Linkedin</a>
+</pre>
+</body>
+
+</html>
