--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 I'm a Backend developer from Argentina🇦🇷  living in the Netherlands🇳🇱 
 
-Currently I'm working as SR. Sorftware Engineer @ <a href="https://bol.com">Bol.com</a>
+Currently I'm working @ <a href="https://bol.com">Bol.com</a>
 
 ## If you want to contact me: 
 <a href="https://www.linkedin.com/in/federico-alvarez-4aaba22b/">Linkedin</a>
